fix word wrap

--- a/Accueil.css
+++ b/Accueil.css
@@ -3,6 +3,7 @@ body
 	font-family: 'Fjalla One', sans-serif;
 	margin: 0;
 	padding-top: 88px;
+	overflow-wrap: break-word;
 }
 
 header {
